Update nav keyframe

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             id aperiam nesciunt doloremque repellat necessitatibus explicabo corporis modi laboriosam, neque maiores
             voluptate
             provident tempora. Ab repudiandae sunt vel blanditiis culpa porro consequatur</p>
-          <a href="success.html" class="btn btn-outline">
+          <a href="index.html" class="btn btn-outline">
             <i class="fas fa-chevron-right"></i>
             Read More</a>
         </div>
